get_joystick/err
/Users/olegbourdo/Documents/Arduino/get_joystick/get_joystick.ino: In function 'void loop()':
/Users/olegbourdo/Documents/Arduino/get_joystick/get_joystick.ino:101:26: error: 'uint16_t HIDComposite::VID' is protected within this context
       Serial.println(Hid.VID, HEX);
                          ^~~
In file included from /Users/olegbourdo/Documents/Arduino/libraries/USB_Host_Shield_Library_2.0/hiduniversal.h:21:0,
                 from /Users/olegbourdo/Documents/Arduino/get_joystick/get_joystick.ino:17:
/Users/olegbourdo/Documents/Arduino/libraries/USB_Host_Shield_Library_2.0/hidcomposite.h:71:23: note: declared protected here
         uint16_t PID, VID; // PID and VID of connected device
                       ^~~
/Users/olegbourdo/Documents/Arduino/get_joystick/get_joystick.ino:103:26: error: 'uint16_t HIDComposite::PID' is protected within this context
       Serial.println(Hid.PID, HEX);
                          ^~~
In file included from /Users/olegbourdo/Documents/Arduino/libraries/USB_Host_Shield_Library_2.0/hiduniversal.h:21:0,
                 from /Users/olegbourdo/Documents/Arduino/get_joystick/get_joystick.ino:17:
/Users/olegbourdo/Documents/Arduino/libraries/USB_Host_Shield_Library_2.0/hidcomposite.h:71:18: note: declared protected here
         uint16_t PID, VID; // PID and VID of connected device
                  ^~~
exit status 1

Compilation error: 'uint16_t HIDComposite::VID' is protected within this context
